# gray-scott-viz

./: .gitignore
gray-scott/: CMakeLists.txt
gray-scott/simulation/: gray-scott.cpp  gray-scott.h  main.cpp  settings.json
gray-scott/vtkm/: CMakeLists.txt  vtkm-render.cxx
scripts/: entropy.py  fdm.py  gen_gs_data.sh  get_compression_ratio.py  get_surface_volume.py  gs_template.json  plot.py  plot_perf.py  plot_surface_comparison.py  test.py
scripts/compressor_profiler/: CMakeLists.txt  decompress_adios.cxx  profile_compress_adios.cxx  profile_decompress_adios.cxx  profile_nocompression_adios.cxx  profile_zc.cxx  zc.config
scripts/decompress_tool/: CMakeLists.txt  decompress_adios.cxx
scripts/gs_data/: analysis_-1_0_1_0.000000001_gs_512_0.0.csv  analysis_-1_0_1_0.00000001_gs_512_0.0.csv  analysis_-1_0_1_0.00000001_gs_512_0.01.csv  analysis_-1_0_1_0.00000001_gs_512_0.5.csv  analysis_-1_0_1_0.00000001_gs_64_0.5.csv  analysis_-1_0_1_0.0000001_gs_512_0.0.csv  analysis_-1_0_1_0.0000001_gs_512_0.01.csv  analysis_-1_0_1_0.0000001_gs_512_0.5.csv  analysis_-1_0_1_0.0000001_gs_64_0.5.csv  analysis_-1_0_1_0.000001_gs_128_0.0.csv  analysis_-1_0_1_0.000001_gs_256_0.0.csv  analysis_-1_0_1_0.000001_gs_512_0.0.csv  analysis_-1_0_1_0.000001_gs_512_0.01.csv  analysis_-1_0_1_0.000001_gs_512_0.5.csv  analysis_-1_0_1_0.000001_gs_64.csv  analysis_-1_0_1_0.000001_gs_64_0.0.csv  analysis_-1_0_1_0.000001_gs_64_0.5.csv  analysis_-1_0_1_0.00001_gs_128_0.0.csv  analysis_-1_0_1_0.00001_gs_256_0.0.csv  analysis_-1_0_1_0.00001_gs_512_0.0.csv  analysis_-1_0_1_0.00001_gs_512_0.01.csv  analysis_-1_0_1_0.00001_gs_512_0.5.csv  analysis_-1_0_1_0.00001_gs_64.csv  analysis_-1_0_1_0.00001_gs_64_0.0.csv  analysis_-1_0_1_0.00001_gs_64_0.5.csv  analysis_-1_0_1_0.0001_gs_128_0.0.csv  analysis_-1_0_1_0.0001_gs_256_0.0.csv  analysis_-1_0_1_0.0001_gs_512_0.0.csv  analysis_-1_0_1_0.0001_gs_512_0.01.csv  analysis_-1_0_1_0.0001_gs_512_0.5.csv  analysis_-1_0_1_0.0001_gs_64.csv  analysis_-1_0_1_0.0001_gs_64_0.0.csv  analysis_-1_0_1_0.0001_gs_64_0.5.csv  analysis_-1_0_1_0.001_gs_128_0.0.csv  analysis_-1_0_1_0.001_gs_256_0.0.csv  analysis_-1_0_1_0.001_gs_512_0.0.csv  analysis_-1_0_1_0.001_gs_512_0.01.csv  analysis_-1_0_1_0.001_gs_512_0.5.csv  analysis_-1_0_1_0.001_gs_64.csv  (+1240 more)
scripts_para/: gen_gs_data.sh  gssim.sh  submit.sh  vis.sh
vtkh/: CMakeLists.txt  vtkh-render.cxx
(+2266 files in other folders)
